fix: AsciiDoc admonition block title alignment

--- a/_sass/adoc-markup.scss
+++ b/_sass/adoc-markup.scss
@@ -85,7 +85,6 @@
       color: white;
       font-weight: bold;
       padding: .3em .6em .25em .6em;
-      margin-top: -.3em;
     }
   }
 
